@@ -457,7 +457,8 @@ class LocaleIdTokenizer {
     for (mCurrentSubtagEnd = mCurrentSubtagStart;
         mCurrentSubtagEnd < mLocaleIdBuffer.length()
             && !isSubtagSeparator(mLocaleIdBuffer.charAt(mCurrentSubtagEnd));
-        mCurrentSubtagEnd++) ;
+        mCurrentSubtagEnd++)
+      ;
 
     if (mCurrentSubtagEnd > mCurrentSubtagStart) {
       mCurrentSubtagEnd--;
@@ -871,7 +872,7 @@ public class LocaleIdentifier {
     }
 
     ArrayList<String> otherExtensions = new ArrayList<>();
-    parsedLocaleIdentifier.otherExtensionsMap.put(new Character(singleton), otherExtensions);
+    parsedLocaleIdentifier.otherExtensionsMap.put(Character.valueOf(singleton), otherExtensions);
 
     while (nextSubtag.isOtherExtension()) {
 
